<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_visual_slam_orb</name>
  <version>0.1.0</version>
  <description>
    ORB-SLAM3 + CUDA backend for isaac_ros_visual_slam.
    Provides the same ROS2 topics, services, and TF tree as
    isaac_ros_visual_slam (cuVSLAM) but uses ORB-SLAM3 as the
    underlying SLAM engine with optional CUDA acceleration.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Message / service types -->
  <depend>cv_bridge</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Same service definitions as isaac_ros_visual_slam (drop-in) -->
  <depend>isaac_ros_visual_slam_interfaces</depend>

  <!-- isaac_ros common utilities (MessageStreamSynchronizer, etc.) -->
  <depend>isaac_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
